# incolumepy.curso.ronanvico-playwright

./: configure.toml  pyproject.toml
.run/: jupyter-run.run.xml
incolumepy/curso/ronanvico_playwright/: __init__.py  automacao_google_chrome.py  move_files_pathlib.py
incolumepy/curso/ronanvico_playwright/notebooks/: Untitled.ipynb
incolumepy_curso_ronanvico_playwright/: __init__.py
tests/: test_incolumepy_curso_ronanvico_playwright.py
