[tool.poetry]
name = "incolumepy.curso.ronanvico-playwright"
version = "0.4.0"
description = ""
authors = ["Britodfbr <britodfbr@gmail.com>"]
packages=[
    {include = 'incolumepy/curso', from=''},
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest-cov = "^3.0.0"
black = "^22.1.0"
isort = "^5.10.1"
pydocstyle = "^6.1.1"
pylint = "^2.12.2"
flake8 = "^4.0.1"
tox = "^3.24.5"
pytest-mock = "^3.7.0"
Sphinx = "^4.4.0"
furo = "^2022.3.4"
myst-parser = "^0.17.0"
mypy = "^0.941"
safety = "^1.10.3"
playwright = "^1.20.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
